--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
     "express": "^4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "request": "^2.74.0",
+    "request-promise": "^4.1.1",
+    "sequelize": "^3.24.1",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^2.4.0"
   }
 }
