--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-input-masks": "^2.4.0",
-    "angular-nvd3": "^1.0.9"
+    "angular-nvd3": "^1.0.9",
+    "checklist-model": "^0.10.0"
   }
 }
