--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-material": "^1.1.1",
     "angular-input-masks": "^2.4.0",
     "angular-nvd3": "^1.0.9",
-    "checklist-model": "^0.10.0"
+    "checklist-model": "^0.10.0",
+    "md-color-picker": "^0.2.6"
   }
 }
