--- a/poller/package.json
+++ b/poller/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-lambda-template",
+  "name": "bubbles-poller",
   "version": "0.0.1",
-  "description": "The bare minimum for a node.js app running on Amazon Lambda. Uses node-lambda under the hood to locally run and also deploy your node.js Amazon Lambda application.",
+  "description": "",
   "main": "index.js",
   "repository": {
     "type": "git",
