--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-expect-file": "0.0.7",
+    "gulp-watch": "^4.3.10",
     "sequelize-cli": "^2.4.0"
   }
 }
