--- a/web/shared/config/config.json
+++ b/web/shared/config/config.json
@@ -1,16 +1,16 @@
 {
-  "development": {
+  "local": {
     "username": "root",
     "password": null,
     "database": "bubbles",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+  "development": {
+    "username": "bubbles",
+    "password": "oneB23VYGBYVzc",
+    "database": "bubbles",
+    "host": "bubbles.c3vcgdaryr9n.eu-west-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "production": {
