--- a/web/.gitignore
+++ b/web/.gitignore
@@ -2,3 +2,8 @@
 public/components/
 node_modules/
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+shared/
