--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,9 @@
     "passport-facebook": "^2.1.1",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sequelize": "~3.24.3",
+    "mysql": "~2.11.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
