--- a/web/.sequelizerc
+++ b/web/.sequelizerc
@@ -1,5 +1,6 @@
 var path = require('path')
 
 module.exports = {
-  'config': path.resolve('shared/config', 'database.js')
+  'config': path.resolve('shared/config', 'database.js'),
+  'migrations-path': path.resolve('shared', 'migrations')
 }
