--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node_modules/sequelize-cli/bin/sequelize db:migrate; NODE_ENV=development nodemon ./bin/www",
-    "start": "node_modules/sequelize-cli/bin/sequelize db:migrate; node ./bin/www"
+    "start": "node_modules/sequelize-cli/bin/sequelize db:migrate; NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
