lambda ready for deploy

--- a/poller/deploy.env
+++ b/poller/deploy.env
@@ -1,1 +1,7 @@
-SECRET_VARIABLE=mysecretval
+FB_CLIENT_ID=533560176843182
+FB_CLIENT_SECRET=687fba6879bf346e6463417d43631751
+FB_ACCESS_TOKEN=533560176843182|mDlOzX76S8WeHkqyzPKFTthlX44
+RDS_USERNAME=bubbles
+RDS_PASSWORD=seam-cashmere-rivulet
+RDS_DB_NAME=bubbles
+RDS_HOSTNAME=bubbles.cjtk8bjf0bnz.eu-west-1.rds.amazonaws.com
