--- a/poller/package.json
+++ b/poller/package.json
@@ -14,15 +14,20 @@
   },
   "homepage": "https://github.com/rebelmail/node-lambda-template",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "fb": "^1.1.1",
     "mysql": "^2.11.1",
+    "node-lambda": "^0.8.10",
     "q": "^1.4.1",
-    "sequelize": "^3.24.3",
+    "sequelize": "^3.24.3"
+  },
+  "devDependencies": {
+    "node-lambda": "^0.8.10",
     "sequelize-cli": "^2.4.0"
   },
   "scripts": {
     "setup": "node-lambda setup",
     "run": "node-lambda run",
-    "deploy": "node-lambda deploy"
+    "deploy": "node-lambda deploy --configFile deploy.env"
   }
 }
